chore: publish main documentation to gh-pages

--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -45,3 +45,25 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         run: mvn -B org.sonarsource.scanner.maven:sonar-maven-plugin:sonar
+
+      - name: Prepare main documentation
+        id: prepare-main-documentation
+        if: github.ref == 'refs/heads/main'
+        run: |
+          TAG_NAME="current"
+          echo "::set-output name=dest_dir::${TAG_NAME}"
+
+      - name: Publish main documentation
+        # https://github.com/peaceiris/actions-gh-pages
+        uses: peaceiris/actions-gh-pages@v3.8.0
+        if: github.ref == 'refs/heads/main'
+        with:
+          cname: sync-packagejson-version-maven-plugin.ingogriebsch.de
+          commit_message: 'docs: publish main documentation to gh-pages'
+          destination_dir: ${{ steps.prepare-main-documentation.outputs.dest_dir }}
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          keep_files: true
+          publish_branch: gh-pages
+          publish_dir: ./target/generated-docs
+          user_email: 'github-actions[bot]@users.noreply.github.com'
+          user_name: 'github-actions[bot]'
