--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -29,6 +29,9 @@ jobs:
           path: ~/.m2/repository
           key: maven-${{ hashFiles('**/pom.xml') }}
 
+      - name: Verify artifacts
+        run: mvn -B -Pintegration-tests verify
+
       - name: Prepare Sonar cache
         # https://github.com/actions/cache
         uses: actions/cache@v2.1.6
@@ -36,10 +39,7 @@ jobs:
           path: ~/.sonar/cache
           key: sonar
 
-      - name: Verify artifacts
-        run: mvn -B -Pintegration-tests verify
-
-      - name: Upload coverage report to SonarCloud
+      - name: Upload coverage report to Sonar
         if: github.ref == 'refs/heads/main'
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
