--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,8 +29,28 @@ jobs:
           path: ~/.m2/repository
           key: maven-${{ hashFiles('**/pom.xml') }}
 
+      - name: Prepare Maven settings
+        # https://github.com/s4u/maven-settings-action
+        uses: s4u/maven-settings-action@v2.4.0
+        if: github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/tags/')
+        with:
+          servers: '[{"id": "ossrh", "username": "${{ secrets.OSSRH_USERNAME }}", "password": "${{ secrets.OSSRH_PASSWORD }}"}]'
+
+      - name: Prepare GPG environment
+        # https://github.com/crazy-max/ghaction-import-gpg
+        uses: crazy-max/ghaction-import-gpg@v3.1.0
+        if: github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/tags/')
+        with:
+          gpg-private-key: ${{ secrets.GPG_PRIVATE_KEY }}
+          passphrase: ${{ secrets.GPG_PASSPHRASE }}
+
       - name: Verify artifacts
+        if: github.ref == 'refs/heads/main' != true && startsWith(github.ref, 'refs/tags/') != true
         run: mvn -B -Pintegration-tests verify
+
+      - name: Deploy artifacts
+        if: github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/tags/')
+        run: mvn -B -Pintegration-tests,ossrh deploy
 
       - name: Prepare Sonar cache
         # https://github.com/actions/cache
