--- a/pom.xml
+++ b/pom.xml
@@ -333,6 +333,8 @@
                 <artifactId>asciidoctor-maven-plugin</artifactId>
                 <configuration>
                     <attributes>
+                        <maven-version>${maven.version}</maven-version>
+                        <java-version>${java.version}</java-version>
                         <project-version>${project.version}</project-version>
                         <project-description>${project.description}</project-description>
                     </attributes>
