--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,16 +18,10 @@ jobs:
         # https://github.com/actions/setup-java
         uses: actions/setup-java@v2
         with:
-          java-version: 11
-          distribution: 'adopt'
+          cache: 'maven'
           check-latest: true
-
-      - name: Prepare Maven cache
-        # https://github.com/actions/cache
-        uses: actions/cache@v2.1.7
-        with:
-          path: ~/.m2/repository
-          key: maven-${{ hashFiles('**/pom.xml') }}
+          distribution: 'adopt'
+          java-version: 11
 
       - name: Prepare Maven settings
         # https://github.com/s4u/maven-settings-action
