chore: mark maven-plugin related deps as provided

--- a/pom.xml
+++ b/pom.xml
@@ -110,6 +110,12 @@
             <artifactId>file-management</artifactId>
             <version>3.0.0</version>
             <scope>provided</scope>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.apache.maven</groupId>
+                    <artifactId>*</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
         <dependency>
             <groupId>org.assertj</groupId>
